--- a/personal_add.html
+++ b/personal_add.html
@@ -152,7 +152,7 @@
                     <a href="index.html" class="navbar-brand">
                         <img src="img/logo.png" alt="Nifty Logo" class="brand-icon">
                         <div class="brand-title">
-                            <span class="brand-text">现代农业产业技术体系平台</span>
+                            <span class="brand-text"></span>
                         </div>
                     </a>
                 </div>
@@ -225,9 +225,8 @@
                                         <label for="demo-is-inputnormal" class="col-sm-5 control-label">性别</label>
                                         <div class="col-sm-4">
                                             <select name="sex" class="form-control" id="sex">
-                                                <option value="0"></option>
-                                                <option value="男">男</option>
-                                                <option value="女">女</option>
+                                                <option value=0>男</option>
+                                                <option value=1>女</option>
                                             </select>
                                         </div>
                                     </div>
@@ -254,10 +253,10 @@
                                         <label for="demo-is-inputnormal" class="col-sm-4 control-label">学位</label>
                                         <div class="col-sm-5">
                                             <select id="degree" name="profile.degree" class="form-control" class="col-xs-8 col-sm-10 col-md-8">
-                                                <option value="0"></option>
-                                                <option value="学士">学士</option>
-                                                <option value="硕士">硕士</option>
-                                                <option value="博士">博士</option>
+                                                <option value=0>其他</option>
+                                                <option value=1>学士</option>
+                                                <option value=2>硕士</option>
+                                                <option value=3>博士</option>
                                             </select>
                                         </div>
                                     </div>
@@ -386,7 +385,7 @@
 
                                                     </select> -->
                                                     <select class="form-control" id="systemName" name="systemName">
-                                                            <option value= "0"> </option>
+                                                            <option value= "0">无</option>
                                                             <option value="1">省体系办</option>
                                                             <option value="2">水稻产业技术体系</option>
                                                             <option value="3">小麦产业技术体系</option>
@@ -411,8 +410,7 @@
                                                 <label for="demo-is-inputnormal" class="col-sm-4 control-label">功能研究室名称</label>
                                                 <div class="col-sm-4">
                                                         <select class="form-control" id="laboratoryName" name="laboratoryName">
-                                                                <option value= "0"> </option>
-                                                        
+
                                                         </select>
                                                 </div>
                                         </div>
@@ -420,7 +418,6 @@
                                                     <label for="demo-is-inputnormal" class="col-sm-4 control-label">综合试验站名称</label>
                                                     <div class="col-sm-4">
                                                             <select class="form-control" id="stationName" name="stationName">
-                                                                    <option value= "0"> </option>
                                                             </select>
                                                     </div>
                                         </div>
@@ -428,10 +425,9 @@
                                             <label for="demo-is-inputnormal" class="col-sm-4 control-label">政治面貌</label>
                                             <div class="col-sm-4">
                                                 <select id="political" class="form-control" name="profile.politicsStatus">
-                                                    <option value="0"></option>
-                                                    <option value="团员">团员</option>
-                                                    <option value="党员">党员</option>
-                                                    <option value="其他">其他</option>
+                                                    <option value=0>其他</option>
+                                                    <option value=1>团员</option>
+                                                    <option value=2>党员</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -445,12 +441,12 @@
                                             <label for="demo-is-inputnormal" class="col-sm-4 control-label">文化程度</label>
                                             <div class="col-sm-4">
                                                 <select id="education" class="form-control" name="profile.education">
-                                                    <option value="0"></option>
-                                                    <option value="初中">初中</option>
-                                                    <option value="高中">高中</option>
-                                                    <option value="大学">大学</option>
-                                                    <option value="硕士">硕士</option>
-                                                    <option value="博士">博士</option>
+                                                    <option value=0>其他</option>
+                                                    <option value=1>初中</option>
+                                                    <option value=2>高中</option>
+                                                    <option value=3>大学</option>
+                                                    <option value=4>硕士</option>
+                                                    <option value=5>博士</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -458,9 +454,8 @@
                                             <label for="demo-is-inputnormal" class="col-sm-4 control-label">部级专家</label>
                                             <div class="col-sm-4">
                                                 <select id="ministeria" class="form-control" name="profile.ministerialExpert">
-                                                    <option value="0"></option>
-                                                    <option value="否">否</option>
-                                                    <option value="是">是</option>
+                                                    <option value=0>否</option>
+                                                    <option value=1>是</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -468,9 +463,8 @@
                                             <label for="demo-is-inputnormal" class="col-sm-4 control-label">省级专家</label>
                                             <div class="col-sm-4">
                                                 <select id="provincial" class="form-control" name="profile.provincialExpert">
-                                                    <option value="0"></option>
-                                                    <option value="否">否</option>
-                                                    <option value="是">是</option>
+                                                    <option value=0>否</option>
+                                                    <option value=1>是</option>
                                                 </select>
                                             </div>
                                         </div>
