--- a/system.html
+++ b/system.html
@@ -148,7 +148,7 @@
                     <a href="index.html" class="navbar-brand">
                         <img src="img/logo.png" alt="Nifty Logo" class="brand-icon">
                         <div class="brand-title">
-                            <span class="brand-text">现代农业产业技术体系平台</span>
+                            <span class="brand-text"></span>
                         </div>
                     </a>
                 </div>
