--- a/test_manager.html
+++ b/test_manager.html
@@ -110,7 +110,7 @@
                 <a href="index.html" class="navbar-brand">
                     <img src="img/logo.png" alt="Nifty Logo" class="brand-icon">
                     <div class="brand-title">
-                        <span class="brand-text">安徽省现代农业产业体系平台</span>
+                        <span class="brand-text"></span>
                     </div>
                 </a>
             </div>
