--- a/user.html
+++ b/user.html
@@ -105,7 +105,7 @@
                     <a href="index.html" class="navbar-brand">
                         <img src="img/logo.png" alt="Nifty Logo" class="brand-icon">
                         <div class="brand-title">
-                            <span class="brand-text">现代农业产业技术体系平台</span>
+                            <span class="brand-text"></span>
                         </div>
                     </a>
                 </div>
@@ -172,8 +172,8 @@
 					               data-show-toggle="true"
 					               data-show-columns="true"
 					               data-sort-name="id"
-					               data-page-list="[5, 10, 20]"
-					               data-page-size="5"
+					               data-page-list="[10, 20]"
+					               data-page-size="10"
 					               data-pagination="true" data-show-pagination-switch="true">
 					        </table>
 					        
