modified system_detail title

--- a/help.html
+++ b/help.html
@@ -518,7 +518,7 @@
                                                                 <ul class="list-unstyled spaced inline bigger-150 margin-20">
                                                                     <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
                                                                         <p>点击“考评管理”菜单项，考评管理，供各位专家进行考评活动所用，如图9所示。</p>
-                                                                        <p style="text-indent: 2em;">●此模块正在完善中。</p>
+                                                                        <p style="text-indent: 2em;">●体系办可以启动对各体系的首席和副首席的考评，首席可以对本体系的人员启动考评。</p>
                                                                     </div>
                                                                 </ul>
                                                             </div>
