--- a/system_detail.html
+++ b/system_detail.html
@@ -154,7 +154,7 @@
         <div id="content-container">
 
             <div id="page-title">
-                <h1 class="page-header text-overflow">体系详情</h1>
+                <h1 id="system_detail_title" class="page-header text-overflow"></h1>
             </div>
             <!--Page content-->
             <!--===================================================-->
