--- a/task.html
+++ b/task.html
@@ -285,10 +285,10 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-sm-3 col-sm-offset-1 control-label">责任人：</label>
+                                    <label class="col-sm-3 control-label">责任人：</label>
                                     <div class="col-sm-6">
                                         <ul id="menu">
-
+                                           
                                         </ul>
                                     </div>
                                 </div>
