--- a/test_manager.html
+++ b/test_manager.html
@@ -486,8 +486,8 @@
                                         <div class="tab-content">
                                             <div class="tab-pane fade in active" id="tabs-box-1">
                                                 <div class="form-group">
-                                                    <label class="col-lg-3 control-label">请您选择体系人员名单：</label>
-                                                    <div class="col-lg-5">
+                                                    <label class="col-sm-5 control-label">请您选择体系人员名单：</label>
+                                                    <div class="col-sm-9">
                                                         <ul id="menu">
 
                                                         </ul>
@@ -496,8 +496,8 @@
                                             </div>
                                             <div class="tab-pane fade " id="tabs-box-2">
                                                 <div class="form-group">
-                                                    <label class="col-lg-3 control-label">请您选择外聘专家名单：</label>
-                                                    <div class="col-lg-5">
+                                                    <label class="col-sm-5 control-label">请您选择外聘专家名单：</label>
+                                                    <div class="col-sm-9">
                                                         <ul id="menu2">
 
                                                         </ul>
