add update echo

--- a/dynamic_detail.html
+++ b/dynamic_detail.html
@@ -251,7 +251,11 @@
                                         <input  class="form-control input-sm" placeholder="" name="system" type="text" readonly>
                                     </div>
                                 </div>
-                                <div class="panel-body">
+                                <div id="old_files" style="text-align: center">
+                                    <div id="old_files_name"></div>
+                                    <button id="old_files_change" class="btn-danger">删除文件</button>
+                                </div>
+                                <div class="panel-body" id="files_add">
 
                                     <div class="bord-top pad-ver">
                                         <!-- The fileinput-button span is used to style the file input field as button -->
