--- a/report_detail.html
+++ b/report_detail.html
@@ -250,7 +250,11 @@
                                         <input  class="form-control input-sm" placeholder="" name="system" type="text" readonly>
                                     </div>
                                 </div>
-                                <div class="panel-body">
+                                <div id="old_files" style="text-align: center">
+                                    <div id="old_files_name"></div>
+                                    <button id="old_files_change" class="btn-danger">删除文件</button>
+                                </div>
+                                <div class="panel-body" id="files_add">
 
                                     <div class="bord-top pad-ver">
                                         <!-- The fileinput-button span is used to style the file input field as button -->
@@ -441,7 +445,7 @@
 
 
                                 <!--Menu list item-->
-                                <li>
+                                <li class="active-link">
                                     <a href="report.html">
                                         <i class="fa fa-file-text"></i>
                                         <span class="menu-title">
@@ -451,7 +455,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li class="active-link">
+                                <li>
                                     <a href="notice.html">
                                         <i class="fa fa-bullhorn"></i>
                                         <span class="menu-title">
