--- a/station.html
+++ b/station.html
@@ -287,17 +287,17 @@
                                         建设依托单位基本概括
                                     </label>
                                     <div class="col-sm-6">
-                                        <textarea placeholder="此信息主要填写建设依托单位简介，字数200字以内，另附挂牌图片一张。" rows="13"
+                                        <textarea placeholder="" rows="13"
                                                  id="content" class="form-control"></textarea>
                                     </div>
                                 </div>
                             </div>
 
+                        </form>
                             <div class="panel-footer text-right">
                                 <button class="btn btn-info middle " data-dismiss="modal">退出</button>
                                 <button id="add" class="btn btn-primary middle">添加</button>
                             </div>
-                        </form>
                     </div>
                 </div>
             </div>
