--- a/station_detail.html
+++ b/station_detail.html
@@ -197,6 +197,13 @@
                                     </h1>
                                     <div style="text-indent:2em;">
                                         <h1 class="text-main">
+                                            <small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>成立时间：&nbsp;&nbsp;
+                                            </small>
+                                            <small id="time"></small>
+                                        </h1>
+                                    </div>
+                                    <div style="text-indent:2em;">
+                                        <h1 class="text-main">
                                             <small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>建设依托单位：&nbsp;&nbsp;
                                             </small>
                                             <small id="company"></small>
