--- a/laboratory_detail.html
+++ b/laboratory_detail.html
@@ -175,15 +175,6 @@
 													<!--<h2 class="panel-title">小麦产业技术体系简介与组织架构</h2>-->
 													<h1 class="text-main" id="name"></h1>
 												</div>
-												<h1 class="text-main ">
-													<small>基本内容展示:</small>
-						            			</h1>
-												<div style="text-indent:2em;">
-													<h1 class="text-main">
-														<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>成立时间：&nbsp;&nbsp;</small>
-														<small id="time"></small>
-													</h1>
-												</div>
 												<div style="text-indent:2em;">
 													<h1 class="text-main">
 														<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>建设依托单位：&nbsp;&nbsp;</small>
@@ -252,17 +243,6 @@
 										</div>
 										<div class="form-group">
 											<label class="col-sm-3 control-label">
-												成立时间
-											</label>
-											<div id="demo-dp-component" class="col-sm-6">
-												<div class="input-group date">
-													<input type="text" class="form-control " name="time">
-													<span class="input-group-addon"><i class="demo-pli-calendar-4"></i></span>
-												</div>
-											</div>
-										</div>
-										<div class="form-group">
-											<label class="col-sm-3 control-label">
 												体系
 											</label>
 											<div class="col-sm-6">
@@ -312,7 +292,7 @@
 
 									<!--Profile Widget-->
 									<!--================================-->
-									<div id="mainnav-profile" class="mainnav-profile">
+									<div id="mainnav-profile" class="mainnav-profile"style="max-height: 550px">
 										<div class="profile-wrap">
 											<div class="pad-btm">
 												<span class="label label-success pull-right">New</span>
@@ -331,6 +311,9 @@
 												<a href="#" class="list-group-item" id="personal_profile">
 														<i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
 													</a>
+											<a href="#" class="list-group-item" id="resetPassWord">
+												<i class="demo-pli-gear icon-lg icon-fw"></i> 个人密码修改
+											</a>
 											<a href="#" class="list-group-item" id="sys_control">
 												<i class="demo-pli-gear icon-lg icon-fw"></i> 体系管理
 											</a>
@@ -383,7 +366,7 @@
 											<!--Menu list item-->
 											<li class="active-link" style="display: none" id="lab">
 												<a href="laboratory.html">
-													<i class="fa fa-university"></i>
+													<i class="fa fa-hourglass-1"></i>
 													<span class="menu-title">
 															<strong>功能研究室</strong>
 														</span>
@@ -413,7 +396,7 @@
 											<!--Menu list item-->
 											<li>
 												<a href="harvest.html">
-													<i class="fa fa-mortar-board"></i>
+													<i class="fa fa-trophy"></i>
 													<span class="menu-title">
 															<strong>重大成果</strong>
 														</span>
