--- a/taskProgress.html
+++ b/taskProgress.html
@@ -333,7 +333,7 @@
 
                             <!--Profile Widget-->
                             <!--================================-->
-                            <div id="mainnav-profile" class="mainnav-profile">
+                            <div id="mainnav-profile" class="mainnav-profile" style="max-height: 550px">
                                 <div class="profile-wrap">
                                     <div class="pad-btm ce">
                                         <img class="img-circle img-sm img-border" src="img/profile-photos/1.png"
@@ -351,6 +351,9 @@
                                         <a href="#" class="list-group-item" id="personal_profile">
                                                 <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                             </a>
+                                    <a href="#" class="list-group-item" id="resetPassWord">
+                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 个人密码修改
+                                    </a>
                                     <a href="#" class="list-group-item" id="sys_control">
                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 体系管理
                                     </a>
@@ -403,7 +406,7 @@
                                     <!--Menu list item-->
                                     <li style="display: none" id="lab">
                                         <a href="laboratory.html">
-                                            <i class="fa fa-university"></i>
+                                            <i class="fa fa-hourglass-1"></i>
                                             <span class="menu-title">
                                                     <strong>功能研究室</strong>
                                                 </span>
@@ -433,7 +436,7 @@
                                     <!--Menu list item-->
                                     <li>
                                         <a href="harvest.html">
-                                            <i class="fa fa-mortar-board"></i>
+                                            <i class="fa fa-trophy"></i>
                                             <span class="menu-title">
                                                     <strong>重大成果</strong>
                                                 </span>
