--- a/personal_profile.html
+++ b/personal_profile.html
@@ -364,7 +364,7 @@
                         
                                             <!--Profile Widget-->
                                             <!--================================-->
-                                            <div id="mainnav-profile" class="mainnav-profile">
+                                            <div id="mainnav-profile" class="mainnav-profile"style="max-height: 550px">
                                                 <div class="profile-wrap">
                                                     <div class="pad-btm ">
                                                         <img class="img-circle img-sm img-border" src="img/profile-photos/1.png" alt="Profile Picture">
@@ -379,6 +379,9 @@
                                                 <div id="profile-nav" class="collapse list-group bg-trans">
                                                     <a href="#" class="list-group-item" id="personal_profile">
                                                         <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
+                                                    </a>
+                                                    <a href="#" class="list-group-item" id="resetPassWord">
+                                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 个人密码修改
                                                     </a>
                                                     <a href="#" class="list-group-item" id="sys_control">
                                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 体系管理
@@ -432,7 +435,7 @@
                                                 <!--Menu list item-->
                                                 <li style="display: none" id="lab">
                                                     <a href="laboratory.html">
-                                                        <i class="fa fa-university"></i>
+                                                        <i class="fa fa-hourglass-1"></i>
                                                         <span class="menu-title">
                                                             <strong>功能研究室</strong>
                                                         </span>
@@ -462,7 +465,7 @@
                                                 <!--Menu list item-->
                                                 <li>
                                                     <a href="harvest.html">
-                                                        <i class="fa fa-mortar-board"></i>
+                                                        <i class="fa fa-trophy"></i>
                                                         <span class="menu-title">
                                                             <strong>重大成果</strong>
                                                         </span>
