--- a/station.html
+++ b/station.html
@@ -273,17 +273,6 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label">
-                                        成立时间
-                                    </label>
-                                    <div id="demo-dp-component" class="col-sm-6">
-                                        <div class="input-group date">
-                                            <input type="text" class="form-control " name="time">
-                                            <span class="input-group-addon"><i class="demo-pli-calendar-4"></i></span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-sm-3 control-label">
                                         建设依托单位基本概括
                                     </label>
                                     <div class="col-sm-6">
@@ -315,7 +304,7 @@
 
                             <!--Profile Widget-->
                             <!--================================-->
-                            <div id="mainnav-profile" class="mainnav-profile">
+                            <div id="mainnav-profile" class="mainnav-profile"style="max-height: 550px">
                                 <div class="profile-wrap">
                                     <div class="pad-btm">
                                         <span class="label label-success pull-right">New</span>
@@ -334,6 +323,9 @@
                                         <a href="#" class="list-group-item" id="personal_profile">
                                                 <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                             </a>
+                                    <a href="#" class="list-group-item" id="resetPassWord">
+                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 个人密码修改
+                                    </a>
                                     <a href="#" class="list-group-item" id="sys_control">
                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 体系管理
                                     </a>
@@ -386,7 +378,7 @@
                                     <!--Menu list item-->
                                     <li style="display: none" id="lab">
                                         <a href="laboratory.html">
-                                            <i class="fa fa-university"></i>
+                                            <i class="fa fa-hourglass-1"></i>
                                             <span class="menu-title">
                                                     <strong>功能研究室</strong>
                                                 </span>
@@ -416,7 +408,7 @@
                                     <!--Menu list item-->
                                     <li>
                                         <a href="harvest.html">
-                                            <i class="fa fa-mortar-board"></i>
+                                            <i class="fa fa-trophy "></i>
                                             <span class="menu-title">
                                                     <strong>重大成果</strong>
                                                 </span>
