--- a/task.html
+++ b/task.html
@@ -284,12 +284,20 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group" id="user1">
                                     <label class="col-sm-3 control-label">责任人：</label>
                                     <div class="col-sm-6">
                                         <ul id="menu">
                                            
                                         </ul>
+                                    </div>
+                                </div>
+                                <div class="form-group" id="user2">
+                                    <label class="col-sm-3 control-label">
+                                        责任人
+                                    </label>
+                                    <div class="col-sm-6">
+                                        <input class="form-control input-sm" placeholder="" name="sx" type="text" readonly="readonly">
                                     </div>
                                 </div>
                                 <div class="panel-body">
@@ -411,7 +419,7 @@
 
                             <!--Profile Widget-->
                             <!--================================-->
-                            <div id="mainnav-profile" class="mainnav-profile">
+                            <div id="mainnav-profile" class="mainnav-profile" style="max-height: 550px">
                                 <div class="profile-wrap">
                                     <div class="pad-btm">
                                         <span class="label label-success pull-right">New</span>
@@ -430,6 +438,9 @@
                                         <a href="#" class="list-group-item" id="personal_profile">
                                                 <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                             </a>
+                                    <a href="#" class="list-group-item" id="resetPassWord">
+                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 个人密码修改
+                                    </a>
                                     <a href="#" class="list-group-item" id="sys_control">
                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 体系管理
                                     </a>
@@ -482,7 +493,7 @@
                                 <!--Menu list item-->
                                 <li style="display: none" id="lab">
                                     <a href="laboratory.html">
-                                        <i class="fa fa-university"></i>
+                                        <i class="fa fa-hourglass-1"></i>
                                         <span class="menu-title">
                                                     <strong>功能研究室</strong>
                                                 </span>
@@ -512,7 +523,7 @@
                                 <!--Menu list item-->
                                 <li>
                                     <a href="harvest.html">
-                                        <i class="fa fa-mortar-board"></i>
+                                        <i class="fa fa-trophy"></i>
                                         <span class="menu-title">
                                                     <strong>重大成果</strong>
                                                 </span>
