--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
         <div class="htop-r">
             <ul class="list-inline">
                 <li>
-                    <a href="login.html">登陆</a>
+                    <a href="login.html">登录</a>
                 </li>
                 <li>
                     <a href="#">注册</a>
