--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@
                 <div class="cls-content-sm panel">
                     <div class="panel-body">
                         <div class="mar-ver pad-btm">
-                            <h1 class="h3 mar-no">用户登陆</h1>
+                            <h1 class="h3 mar-no">用户登录</h1>
 
                         </div>
 
@@ -106,7 +106,7 @@
                                 <input  class="magic-checkbox" id="remember-password"  type="checkbox">
                                 <label for="remember-password">记住密码</label>
                             </div>
-                            <button class="btn btn-primary btn-lg btn-block" name="submit" onClick="checkInCorrect();validate()" id="login" >登陆</button>
+                            <button class="btn btn-primary btn-lg btn-block" name="submit" onClick="checkInCorrect();validate()" id="login" >登录</button>
                     </div>
 
                     <div class="pad-all">
